--- a/.github/workflows/codio-publish.yml
+++ b/.github/workflows/codio-publish.yml
@@ -15,9 +15,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v1
 
-      - name: Cleanup
-      # removes the following files/folders when publishing
-        run: rm README.md
+      #- name: Cleanup
+      #  run: rm README.md
 
       - name: Publish to Codio
         uses: codio/codio-assignment-publish-action@master
